# ros2_best_practices

./: LICENSE  README.md  porting_guide.md  usefull_command_line_snips.txt
package_template/: CMakeLists.txt  README.md  package.xml
package_template/include/package_template/: package_template_node.hpp
package_template/src/: package_template_node.cpp
ros2_package_template/: CMakeLists.txt  README.md  package.xml
ros2_package_template/include/ros2_package_template/: ros2_package_template_node.hpp
ros2_package_template/src/: ros2_package_template_node.cpp
test_template/: test_integration_example.py
